<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VirtualStreet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Virtual Street</string>
    <string name="button_start">Comenzar</string>
    <string name="button_map">Ver Mapa</string>
    <string name="button_settings">Configuración</string>
    <string name="button_character">Seleccionar Personaje</string>
    <string name="juv_description">Juv es un adolescente que nació en la ciudad. Si bien tiene intereses variados lo que más le gusta es conocer lugares donde los jóvenes se reúnen (plaza, peatonal, cine) y por supuesto, los lugares a donde salen a divertirse ¡Elegilo y sumante a sus aventuras!</string>
    <string name="dult_description">Dult es un adulto que está interesado en conocer lugares familiares donde pasar un buen rato como por ejemplo Campings y lugares recreativos como plazas donde pueda llevar a su familia ¡No te pierdas lo que Dult tiene para mostrate!</string>
    <string name="bila_description">Bila es una adulto que está interesado en conocer los lugares más emblemáticos de la ciudad y su historia como así también Cafes y Restaurantes donde pasar un buen momento.</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="app_id">299518183579902</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_cloud_reco">CloudReco</string>
    <string name="title_activity_image_target">ImageTarget</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_TITLE">Network Unavailable</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_TITLE">Unsupported Version</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_TITLE">Clock Sync Error</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_TITLE">Request Timeout</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_TITLE">Poor Camera Image</string>
    <string name="UPDATE_ERROR_UNKNOWN_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_DESC">The cloud recognition service access keys are incorrect or have expired.</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_DESC">The cloud recognition service has been suspended.</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_DESC">Please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_DESC">The service is unavailable, please try again later.</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_DESC">The application is using an unsupported version of Vuforia.</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_DESC">Please update the date and time and try again.</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_DESC">The network request has timed out, please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_DESC">The camera does not have enough detail, please try again later.</string>
    <string name="UPDATE_ERROR_UNKNOWN_DESC">The service is unavaiable, please try again later.</string>
    <string name="button_OK">OK</string>
    <string name="menu_back">Virtual Street</string>
    <string name="menu_extended_tracking">Extended Tracking</string>
    <string name="menu_character_mode">Character Mode</string>
    <string name="menu_flash">Flash</string>
    <string name="menu_flash_error_on">Unable to turn on flash</string>
    <string name="menu_flash_error_off">Unable to turn off flash</string>
    <string name="menu_contAutofocus">Autofocus</string>
    <string name="menu_contAutofocus_error_on">Unable to activate Continuous Auto-Focus</string>
    <string name="menu_contAutofocus_error_off">Unable to deactivate Continuous Auto-Focus</string>
    <string name="menu_datasets">DATASETS</string>
    <string name="menu_camera">CAMERA</string>
    <string name="menu_camera_front">Front</string>
    <string name="menu_camera_back">Rear</string>
    <string name="title_activity_character">CharacterActivity</string>
    <string name="title_activity_detail_zone">DetailZoneActivity</string>
    <string name="title_activity_limpiacity">LimpiacityActivity</string>
    <string name="title_activity_result">ResultActivity</string>

</resources>
