<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:src="@drawable/mainactivitybackgraund"
    	android:scaleType="centerCrop"	>

    </ImageView>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_juv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/titles"
            android:textSize="70sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshape" />

        <Button
            android:id="@+id/button_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_map"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshape" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_settings"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshape"
            android:onClick="configurar"
            
             />

    </LinearLayout>

	</RelativeLayout>
</FrameLayout>
